--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,25 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+button{
+  outline: none;
+  border: none;
+}
+ul li{
+  text-decoration: none;
+  list-style: none;
+  color: rgba(240, 248, 255, 0.76);
+}
+a{
+  text-decoration: none;
+}
+p, h1, h2, h3, h4 ,h5 , h6{
+  color: rgba(240, 248, 255, 0.76);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-button {
-  font-size: calc(10px + 2vmin);
+.App{
+  height: 100vh;
+  background-color: rgb(255, 255, 255);
 }
