--- a/frontend/src/routes/register/register.css
+++ b/frontend/src/routes/register/register.css
@@ -2,8 +2,13 @@
     display: flex;
     width: 100%;
     height: 100vh;
+    box-sizing: border-box;
     /* background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%); */
     background-color: rgba(15, 21, 26, 0.856);
+}
+
+img{
+    width: 100%;
 }
 
 .form-content{
@@ -45,3 +50,19 @@
     color: aliceblue;
     background-color: #0ba360;
 }
+
+.form-content form .input-file{
+    display: none;
+}
+
+label{
+    width: 5rem;
+    height: 5rem;
+    background-color: #0ba360;
+}
+.form-content form  .lbl-portada{
+    max-width:1rem;
+    height: 7rem;
+}
+
+
