--- a/frontend/src/routes/register/register.css
+++ b/frontend/src/routes/register/register.css
@@ -51,9 +51,9 @@ img{
     background-color: #0ba360;
 }
 
-.form-content form .input-file{
+/* .form-content form .input-file{
     display: none;
-}
+} */
 
 label{
     width: 5rem;
@@ -64,5 +64,3 @@ label{
     max-width:1rem;
     height: 7rem;
 }
-
-
