--- a/frontend/src/components/chats/chats.css
+++ b/frontend/src/components/chats/chats.css
@@ -28,32 +28,35 @@
     bottom: 1rem;
     height: 2rem;
     width: 100%;
-    /* padding: 0 .2rem; */
+    background-color: none;
     display: flex;
+    padding: 0 .5rem;
 }
 
-
-.form{
+.form-chats{
     border-radius:50px;
     background-color: rgba(17, 27, 33, 0.753);
-    /* height: 100%; */
+    height: 100%;
     width: 87%;
     outline: none;
     margin-right: .2rem;
+    
 }
 
-.form input{
+.form-chats input{
+    outline: none;
     border: none;
     width: 100%;
     height: 100%;
-    border-radius:50px;
     background-color: transparent;
+    color: whitesmoke;
     padding-left: .5rem;
 }
 
 .btn-message{
+    border-radius:20px;
     outline: none;
-    border-radius: 50px;
     text-align: center;
     font-size: medium;
+    background-color: rgb(31, 207, 31);
 }
