--- a/frontend/src/components/chats/chats.css
+++ b/frontend/src/components/chats/chats.css
@@ -1,4 +1,7 @@
 .chats{
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 100%;
     max-height: 100vh;
     height: 100vh;
     display: flex;
@@ -13,7 +16,7 @@
     padding: .5rem 0;
     background-color: rgb(17, 27, 33);
 }
-.chats-content{
+.messages-content{
     padding: 0;
     width: 100%;
     height: 95%;
@@ -59,4 +62,22 @@
     text-align: center;
     font-size: medium;
     background-color: rgb(31, 207, 31);
+}
+.msg-block{
+    display: block;
+    box-sizing: content-box;
+    margin:.8rem 0 ;
+    margin-bottom: .5rem;
+}
+.messsge { 
+    display: block;
+    height: auto;
+    width: fit-content;
+    font-size: 1rem;
+    background-color: bisque;
+    margin-bottom: .5rem;
+    
+} 
+.user-msg {
+
 }
