--- a/frontend/src/routes/login/login.css
+++ b/frontend/src/routes/login/login.css
@@ -1,9 +1,8 @@
-.register-page{
+.login-page{
     display: flex;
     width: 100%;
     height: 100vh;
     box-sizing: border-box;
-    /* background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%); */
     background-color: rgba(15, 21, 26, 0.856);
 }
 
@@ -51,9 +50,6 @@ img{
     background-color: #0ba360;
 }
 
-/* .form-content form .input-file{
-    display: none;
-} */
 
 label{
     width: 5rem;
@@ -63,4 +59,39 @@ label{
 .form-content form  .lbl-portada{
     max-width:1rem;
     height: 7rem;
+}
+
+ /* Media Query for Mobile Devices */
+ @media (max-width: 480px) {
+    body {
+        background-color: red;
+    }
+}
+  
+/* Media Query for low resolution  Tablets, Ipads */
+@media (min-width: 481px) and (max-width: 767px) {
+    body {
+        background-color: yellow;
+    }
+}
+  
+/* Media Query for Tablets Ipads portrait mode */
+@media (min-width: 768px) and (max-width: 1024px){
+    body {
+        background-color: blue;
+    }
+}
+  
+/* Media Query for Laptops and Desktops */
+@media (min-width: 1025px) and (max-width: 1280px){
+    body {
+        background-color: green;
+    }
+}
+  
+/* Media Query for Large screens */
+@media (min-width: 1281px) {
+    body {
+        background-color: white;
+    }
 }
