--- a/frontend/src/routes/login/login.css
+++ b/frontend/src/routes/login/login.css
@@ -3,35 +3,41 @@
     width: 100%;
     height: 100vh;
     box-sizing: border-box;
-    background-color: rgba(15, 21, 26, 0.856);
+    background: linear-gradient(to right bottom, whitesmoke 50%, #464953 50%);
+    /* background: linear-gradient(to right bottom, #2f3441 50%, #212531 50%); */
+    /* background-color: rgba(15, 21, 26, 0.856); */
 }
 
 img{
     width: 100%;
 }
+.login-image{
+    display: none;
+}
 
-.form-content{
+.form-content-login{
     border-radius: 1rem;
-    margin: auto;
     width: 80%;
+    margin: auto;
     padding: 1rem;
-    height: auto;
+    /* height: auto; */
     background-color: whitesmoke;
 }
-.form-content h1{
+
+.form-content-login h1{
     color: black;
     text-align: center;
     margin-bottom: .5rem;
 }
 
-.form-content form input,
-.form-content form textarea{
+.form-content-login form input,
+.form-content-login form textarea{
     width: 100%;
     padding: 1rem;
     margin-bottom: .5rem;
 }
 
-.form-content form input{
+.form-content-login form input{
     border: 2px solid green;
     border-right: none;
     border-left: none;
@@ -41,44 +47,71 @@ img{
 }
 
 .btn-next{
-    display: block;
-    margin-top: .5rem;
+    display: inline-block;
     padding: .2rem .5rem;
     font-size: 1.5rem;
-    float: right;
     color: aliceblue;
     background-color: #0ba360;
 }
 
+.buttons-container{
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+}
 
 label{
     width: 5rem;
     height: 5rem;
     background-color: #0ba360;
 }
-.form-content form  .lbl-portada{
+
+.form-content-login form  .lbl-portada{
     max-width:1rem;
     height: 7rem;
 }
 
- /* Media Query for Mobile Devices */
- @media (max-width: 480px) {
-    body {
-        background-color: red;
-    }
-}
   
 /* Media Query for low resolution  Tablets, Ipads */
 @media (min-width: 481px) and (max-width: 767px) {
-    body {
-        background-color: yellow;
+    .login-image{
+        display: none;
+    }
+
+    .form-content-login{
+        border-radius: 1rem;
+        width: 25rem;
+        margin: auto;
+        padding: 1rem;
+        background-color: whitesmoke;
+    }
+
+    .buttons-container{
+        margin-top: 1rem;
+        display: flex;
+        justify-content: center;
+        justify-content: space-evenly;
     }
 }
   
 /* Media Query for Tablets Ipads portrait mode */
 @media (min-width: 768px) and (max-width: 1024px){
-    body {
-        background-color: blue;
+    .login-image{
+        display: block;
+        padding: 1rem;
+        width: 45%;
+    }
+
+    .form-content-login{
+        border-radius: 1rem;
+        width: 25rem;
+        margin: auto;
+        padding: 1rem;
+        background-color: whitesmoke;
+        border-top-left-radius: 80px;
+        /* border-style: dashed; */
+        /* background: linear-gradient(to right bottom, transparent 50%, whitesmoke  50%); */
     }
 }
   
@@ -91,7 +124,22 @@ label{
   
 /* Media Query for Large screens */
 @media (min-width: 1281px) {
-    body {
-        background-color: white;
+    .login-page{
+        display: flex;
+        /* flex-direction: row-reverse; */
+        background: linear-gradient(to top bottom, #464953 50%, whitesmoke 50%);
+    }
+    .login-image{
+        display: flex;
+        padding: 1rem;
+        width: 40%;
+    }
+
+    .form-content-login{
+        border-radius: 1rem;
+        width: 25rem;
+        margin: auto;
+        padding: 1rem;
+        background-color: whitesmoke;
     }
 }
