--- a/frontend/src/routes/register/register.css
+++ b/frontend/src/routes/register/register.css
@@ -3,12 +3,14 @@
     width: 100%;
     height: 100vh;
     box-sizing: border-box;
-    /* background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%); */
-    background-color: rgba(15, 21, 26, 0.856);
+    background: linear-gradient(to right bottom, whitesmoke 50%, #464953 50%);
 }
 
 img{
     width: 100%;
+}
+.register-image{
+    display: none;
 }
 
 .form-content{
@@ -41,6 +43,20 @@ img{
     background: transparent;
 }
 
+input[type="file"]{
+    display: none;
+}
+
+.lbl-portada{
+    border: none;
+}
+
+label img{
+    display: block;
+    margin: auto;
+    width: 5rem;
+}
+
 .btn-next{
     display: block;
     margin-top: .5rem;
@@ -51,16 +67,64 @@ img{
     background-color: #0ba360;
 }
 
-/* .form-content form .input-file{
-    display: none;
-} */
-
-label{
-    width: 5rem;
-    height: 5rem;
-    background-color: #0ba360;
+.buttons-container{
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
 }
+
 .form-content form  .lbl-portada{
     max-width:1rem;
     height: 7rem;
+}
+
+@media (min-width: 768px) and (max-width: 1024px){
+    .form-content{
+        width: 25rem;
+        margin: auto;
+        padding: 1rem;   
+        background: linear-gradient(to right bottom, #464953 52%,  whitesmoke  48%);
+        color: white;
+    }
+    .form-content h1{
+        color: white;
+    }
+    .form-content form input{
+        color: white;
+    }
+    .form-content form input:focus{
+        border: none;
+        outline: solid 2px green;
+    }
+}
+  
+/* Media Query for Laptops and Desktops */
+@media (min-width: 1025px) and (max-width: 1280px){
+    .register-page{
+        display: flex;
+        width: 100%;
+        height: 100vh;
+        box-sizing: border-box;
+        background: linear-gradient(to right, whitesmoke 50%, #464953 50%);
+    }
+
+    .register-image{
+        display: flex;
+        padding: 1rem;
+        width: 45%;
+    }
+
+    .form-content{
+        border-radius: 1rem;
+        width: 25rem;
+        margin: auto;
+        padding: 1rem;
+        background-color: whitesmoke;
+    }
+}
+  
+/* Media Query for Large screens */
+@media (min-width: 1281px) {
+
 }
