--- a/frontend/src/routes/login/login.css
+++ b/frontend/src/routes/login/login.css
@@ -9,11 +9,11 @@
 img{
     width: 100%;
 }
-.login-image{
+
+.login-description{
     display: none;
 }
-
-.form-content-login{
+.form-content-login {
     border-radius: 1rem;
     width: 80%;
     margin: auto;
@@ -27,14 +27,14 @@ img{
     margin-bottom: .5rem;
 }
 
-.form-content-login form input,
-.form-content-login form textarea{
+.form-login input,
+textarea{
     width: 100%;
     padding: 1rem;
     margin-bottom: .5rem;
 }
 
-.form-content-login form input{
+.form-login input{
     border: 2px solid green;
     border-right: none;
     border-left: none;
@@ -64,7 +64,7 @@ label{
     background-color: #0ba360;
 }
 
-.form-content-login form  .lbl-portada{
+.form-login .lbl-portada{
     max-width:1rem;
     height: 7rem;
 }
@@ -114,8 +114,55 @@ label{
   
 /* Media Query for Laptops and Desktops */
 @media (min-width: 1025px) and (max-width: 1280px){
-    body {
-        background-color: green;
+    .login-page{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background: linear-gradient(to right, #464953 50%, whitesmoke 50%);
+    }
+
+    .login-description{
+        width: 45%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+        padding: 1rem;
+    }
+    .login-description h2{
+        font-size: xx-large;
+        font-weight: 600;
+    }
+
+    .form-content-login{
+        display: flex; 
+        width: 50%;
+        height: 100%;
+        margin: 0;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;       
+    }
+    .form-content-login h1{
+        font-size: xx-large;
+        font-weight: 600;
+    }
+    .form-login{
+        height: 50%;
+    }
+    .form-login input{
+        border-bottom: ridge green 2px;
+        font-size: large;
+        margin-bottom: 1rem;
+    }
+    .buttons-container{
+        flex-direction: column-reverse;
+    }
+    .buttons-container .btn-next{
+        padding: 1rem;
+        width: 100%;
     }
 }
   
@@ -124,12 +171,18 @@ label{
     .login-page{
         display: flex;
         /* flex-direction: row-reverse; */
-        background: linear-gradient(to top bottom, #464953 50%, whitesmoke 50%);
+        justify-content: center;
+        align-items: center;
+        background: linear-gradient(to right, #464953 50%, whitesmoke 50%);
     }
-    .login-image{
+    /* .login-image{
         display: flex;
         padding: 1rem;
         width: 40%;
+    } */
+    .login-description{
+        display: block;
+        padding: 1rem;
     }
 
     .form-content-login{
