--- a/frontend/src/routes/register/register.css
+++ b/frontend/src/routes/register/register.css
@@ -48,7 +48,14 @@ input[type="file"]{
 }
 
 .lbl-portada{
+    
+    cursor: pointer;
     border: none;
+}
+
+.lbl-portada:hover{
+    opacity: 30%;
+    animation-delay: 1s;
 }
 
 label img{
@@ -116,7 +123,7 @@ label img{
         display: block;
     }
     .register-presentation h3{
-        color: black;
+        color: white;
         font-family:Verdana, Geneva, Tahoma, sans-serif ;
     }
 
@@ -151,6 +158,7 @@ label img{
     }
     .register-presentation h3{
         color: white;
+        font-size: x-large;
         font-family:Verdana, Geneva, Tahoma, sans-serif ;
     }
 
@@ -164,16 +172,26 @@ label img{
     }
     .form-content .register-form{
         width: 30rem;
-        height: 30rem;
+        height: 80%;
     }
     
     .form-content form input, textarea{
         border: solid 1px;
         font-size: 1.2rem;
-        background: #7f8188d2;
+        background: #88888a93;
         margin-top: 1rem;
     }
+
     .buttons-container{
         width: 100%;
+    }
+
+    .buttons-container{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .buttons-container .btn-next{
+        padding: 1rem;
+        cursor: pointer;
     }
 }
