fix message desing

--- a/frontend/src/components/chats/chats.css
+++ b/frontend/src/components/chats/chats.css
@@ -67,25 +67,33 @@
 }
 
 .msg-block{
-    display: block;
-    box-sizing: content-box;
+    box-sizing:content-box;
+    height: auto;
     margin:.8rem 0 ;
     margin-bottom: .5rem;
+    font-size: 6vmin;
 }
 
-.messsge { 
-    display: block;
-    height: auto;
+.messsge {
+    max-width: 50%;
     width: fit-content;
+    height: auto;
+    padding: 0 .5rem;
     font-size: 1rem;
-    /* background-color: bisque; */
+    border-radius: 1rem;
     margin-bottom: .5rem;
-    
+    color: black;
+    word-wrap: break-word;
 }
 
 .user-msg {
-    font-size: large;
-    font-weight: bold;
+    position: relative;
+    right: 0;
+    background-color: rgb(7, 177, 64);
 }
 
-
+.friend-msg{
+    position: relative;
+    left: 0;
+    background-color: white;
+}
