--- a/frontend/src/components/chats/chats.css
+++ b/frontend/src/components/chats/chats.css
@@ -59,18 +59,21 @@
 }
 
 .btn-message{
+    padding: .5rem;
+    align-self: center;
     border-radius:20px;
-    outline: none;
+    /* outline: none; */
     text-align: center;
     font-size: medium;
     background-color: rgb(31, 207, 31);
 }
 
 .msg-block{
+    display: flex;
+    flex-direction: column;
     box-sizing:content-box;
     height: auto;
-    margin:.8rem 0 ;
-    margin-bottom: .5rem;
+    margin:.8rem 0;
     font-size: 6vmin;
 }
 
@@ -78,22 +81,21 @@
     max-width: 50%;
     width: fit-content;
     height: auto;
-    padding: 0 .5rem;
+    padding: .1rem .5rem;
     font-size: 1rem;
-    border-radius: 1rem;
-    margin-bottom: .5rem;
+    border-radius: .5rem;
+    margin-bottom: .2rem;
     color: black;
     word-wrap: break-word;
 }
 
 .user-msg {
-    position: relative;
-    right: 0;
+    align-self: flex-end;
+    margin-right: .3rem;
     background-color: rgb(7, 177, 64);
 }
 
 .friend-msg{
-    position: relative;
-    left: 0;
+    margin-left: .3rem;
     background-color: white;
 }
