--- a/frontend/src/components/chats/chats.css
+++ b/frontend/src/components/chats/chats.css
@@ -6,7 +6,7 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
+    background-color: rgb(101, 122, 134);
 }
 
 .header{
@@ -15,6 +15,7 @@
     display: flex;
     padding: .5rem 0;
     background-color: rgb(17, 27, 33);
+    margin-bottom: .5rem;
 }
 
 .messages-content{
@@ -63,7 +64,6 @@
     padding: .5rem;
     align-self: center;
     border-radius:20px;
-    /* outline: none; */
     text-align: center;
     font-size: medium;
     background-color: rgb(31, 207, 31);
